src/snapshots/bl__tests__snapshots__cmd_daemon__status.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Show daemon status

Usage: bl daemon status [OPTIONS]

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help
